--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
 node_modules
+
+npm-debug.log*
+yarn-error.log
+package-lock.json
+
+.DS_Store
+.cache
+.vscode
+.idea
+.env
+
+*.bak
+*.tem
+*.temp
+#.swp
+*.*~
+~*.*
+
+# IDEA
+*.iml
+*.ipr
+*.iws
+.idea/
