--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,17 +3,15 @@ on:
   push:
     branches:
       - master
+
 jobs:
   build-deploy:
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@master
-
-    - name: Setup Node
-      uses: actions/setup-node@v1
+    - uses: actions/setup-node@v2
       with:
-        node-version: 12
-        registry-url: https://registry.npmjs.org/
+        node-version: 14
 
     - run: npm run start
     - name: Deploy
