chore: update .github/workflows/ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,5 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./img
+        user_name: github-actions[bot]
+        user_email: github-actions[bot]@users.noreply.github.com
